canary-deploymentv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canaryv2
spec:
  selector:
    matchLabels:
      app: canaryv2
  template:
    metadata:
      labels:
        app: canaryv2
    spec:
      containers:
      - name: canaryv2
        image: onlysalam/simplewebapp:11572
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
