canary-deploymnetv1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canaryv1
spec:
  selector:
    matchLabels:
      app: canaryv1
  template:
    metadata:
      labels:
        app: canaryv1
    spec:
      containers:
      - name: canaryv1
        image: onlysalam/simplewebapp:11572
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
